class User {
  // User code here
  // Creating a user object
  constructor(username, password, age){
    // if (this.age < 17){
    //   console.log("")
    // }
    this.username = username
    this.password = password
    this.age = age
  }

  //METHODS 

}

module.exports = User
